# web-server

./: .astylerc  .gitignore  CMakeLists.txt  README.md  build.sh  config.txt  install.sh  run.sh
doc/: Doxyfile
doc/html/: 60-example.html  61-example.html  63-example.html  _2home_2clover_2Projects_2web-server_2src_2main_8c-example.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_func.html  globals_type.html  globals_vars.html  http-handler_8c.html  http-handler_8c_source.html  http-handler_8h.html  http-handler_8h_source.html  http-header_8c_source.html  http-header_8h_source.html  http-request_8c_source.html  http-request_8h.html  http-request_8h_source.html  index.html  main_8c.html  main_8c_source.html  menudata.js  stack_8c_source.html  stack_8h.html  stack_8h_source.html  structHTTPHeader.html  structHTTPHeaders.html  structHTTPRequest.html  structStackNode.html
doc/latex/: 60-example.tex  61-example.tex  63-example.tex  _2home_2clover_2Projects_2web-server_2src_2main_8c-example.tex  annotated.tex  examples.tex  files.tex  http-handler_8c.tex  http-handler_8c_source.tex  http-handler_8h.tex  http-handler_8h_source.tex  http-header_8c_source.tex  http-header_8h_source.tex  http-request_8c_source.tex  (+12 more)
lib/: CMakeLists.txt  http-handler.c  http-handler.h  http-header.c  http-header.h  http-request.c  http-request.h  stack.c  stack.h
src/: main.c
tests/: index.html
(+43 files in other folders)
